# viewpoint-diverse-training-diet

./: main.py  pyproject.toml  requirements.txt
config/: config.json
scripts/: access_tester.ipynb  parse_config.py  test.py  train.py
scripts/experiments/: vgg_v1.py
scripts/slurm/: run_experiment.sh  run_experiment_parallel.sh
src/viewpoint_diverse_training_diet/: __init__.py
src/viewpoint_diverse_training_diet/data_loader/: data_loaders.py  distributed_data_loaders.py  webdataset_loader.py
src/viewpoint_diverse_training_diet/logger/: __init__.py  wandb_writer.py
src/viewpoint_diverse_training_diet/losses/: __init__.py
src/viewpoint_diverse_training_diet/metrics/: __init__.py
src/viewpoint_diverse_training_diet/models/: base_model.py
src/viewpoint_diverse_training_diet/trainer/: __init__.py  distributed_trainer.py  trainer.py
src/viewpoint_diverse_training_diet/utils/: distributed.py  util.py
